# Zomato-AI-Restaurent-Recommendation-System

./: .env.example  .gitignore  config.yaml  pyproject.toml  streamlit_app.py
doc/: architecture.md  improvements.md  problemStatement.md
tests/: test_cuisine_catalog.py  test_filtering_selection.py  test_groq_live.py  test_ingestion_normalize.py  test_phase3.py  test_phase4_api.py
web/: .env.local.example  README.md  package-lock.json
web/app/: globals.css  page.tsx
web/components/: Footer.tsx  RecommendationApp.tsx  RecommendationCard.tsx
web/lib/: types.ts
zomato_recommendation/: __init__.py  app_config.py
zomato_recommendation/phase0/: __init__.py
zomato_recommendation/phase1/: __init__.py  field_mapping.py  inspect_dataset.py  load.py  normalize.py
zomato_recommendation/phase2/: __init__.py  budget_config.py  cuisine_catalog.py  location_aliases.py  preferences.py  selection.py
zomato_recommendation/phase2/config/: __init__.py  budget_bands.json
zomato_recommendation/phase3/: __init__.py  fallback.py  groq_client.py  merge.py  parse.py  prompt_v1.py  recommend.py  schemas.py  settings.py
zomato_recommendation/phase4/: __init__.py  __main__.py  app.py  schemas.py  service.py
zomato_recommendation/phase4/web/: .env.local.example  README.md  next.config.mjs  package.json  tailwind.config.ts
zomato_recommendation/phase4/web/app/: globals.css  layout.tsx
zomato_recommendation/phase4/web/components/: Navbar.tsx  RecommendationApp.tsx  RecommendationCard.tsx
zomato_recommendation/phase5/: __init__.py
(+1 files in other folders)
